fixed picker not visible in chrome and changed saveSelection to mousedown

--- a/src/main/resources/static/front/style.css
+++ b/src/main/resources/static/front/style.css
@@ -539,9 +539,7 @@ body {
   background-color: black;
 }
 #colorpicker {
-  position: absolute;
-  left: -9999px;
-  top: -9999px;
+  display: none;
 }
 
 .hFold{
